<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.campuscoach.activity.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/login_head"/>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_top_layout"
            android:textColor="#000"
            android:textSize="15sp"
            android:ems="11"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:background="@drawable/login_editbox"
            android:hint="@string/login_account"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_top_layout"
            android:textColor="#000"
            android:textSize="15sp"
            android:ems="11"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:password="true"
            android:background="@drawable/login_editbox"
            android:hint="@string/login_pwd"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_commit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_commit"/>

    <TextView
        android:id="@+id/reg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/login_start_reg"/>
</LinearLayout>
