<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.campuscoach.activity.ReservationActivity"
    >

    <include layout="@layout/tollbar" />

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_title1"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_title2"
                android:textSize="20dp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_title_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:ems="11"
                    android:hint="@string/user_order_title" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_sports_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:ems="11"
                    android:hint="@string/user_order_sports" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_price_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_price" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_count_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_count"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_time_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_time" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_place_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_place" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_number_of_learner_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_number_of_learner"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_phone_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user_order_remark_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:ems="11"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_order_remark"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/user_order_commit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="55dp"
                android:text="@string/commit" />
        </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
