<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@color/light_blue"/>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:background="@color/white">

                <RadioButton
                    android:id="@+id/book_coach"
                    style="@style/NavTabButton"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:drawableTop="@drawable/bg_checkbox_icon_menu_0"
                    android:text="@string/book_coach"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/training_class"
                    style="@style/NavTabButton"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/bg_checkbox_icon_menu_1"
                    android:text="@string/training_class"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/register_requirement"
                    style="@style/NavTabButton"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/bg_checkbox_icon_menu_2"
                    android:text="@string/register_requirement"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/personal_info"
                    style="@style/NavTabButton"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/bg_checkbox_icon_menu_3"
                    android:text="@string/personal_info"
                    android:textColor="@color/black"/>

            </RadioGroup>
        </FrameLayout>
    </LinearLayout>

</TabHost>